# software-craftsman-ship

./: README.md
working-effectively-with-legacycode-cc++/cpp/: CMakeLists.txt
working-effectively-with-legacycode-cc++/cpp/Counter/: CMakeLists.txt
working-effectively-with-legacycode-cc++/cpp/FakeGraphicsLib/: CMakeLists.txt  FakeGraphics.cpp  Graphics.h  GraphicsAction.h
working-effectively-with-legacycode-cc++/cpp/HelloWorld/: CMakeLists.txt
working-effectively-with-legacycode-cc++/cpp/MySharedLib/: CMakeLists.txt  REAMDME.md  library.cpp  library.h
working-effectively-with-legacycode-cc++/cpp/biz/: .gitignore  CMakeLists.txt
working-effectively-with-legacycode-cc++/cpp/biz/include/: DEBUG.h
working-effectively-with-legacycode-cc++/cpp/biz/include/EncapsulateGlobalReferences/: AGGController.h  ColumnModel.h  Frame.h  Global.h  Option.h  OptionSource.h  ProductionOptionSource.h
working-effectively-with-legacycode-cc++/cpp/biz/include/ExtractAndOverrideGetter/: AppConfig.h  AppConfiguration.h  Reader.h  TransactionManager.h  WorkflowEngine.h  XMLStore.h
working-effectively-with-legacycode-cc++/cpp/biz/include/ExtractImplementer/: ModelNode.h  ProductionModelNode.h
working-effectively-with-legacycode-cc++/cpp/biz/include/ExtractInterface4Singleton/: ExternalRouter.h  IExternalRouter.h  Message.h  MessageRouter.h
working-effectively-with-legacycode-cc++/cpp/biz/include/IntroduceStaticSetter/: Dispatcher.h  ExternalRouter.h  MessageRouter.h
working-effectively-with-legacycode-cc++/cpp/biz/include/ParameterizeMethod/: TestCase.h  TestResult.h
working-effectively-with-legacycode-cc++/cpp/biz/include/PushDownDependency/: OffMarketTradeValidator.h  Trade.h  TradeValidator.h  WindowsOffMarketTradeValidator.h
working-effectively-with-legacycode-cc++/cpp/biz/include/ReplaceFunctionWithFunctionPointer/: db.h  function_pointer_sample.h
working-effectively-with-legacycode-cc++/cpp/biz/include/SproutClass/: Database.h  QuarterlyReportGenerator.h  QuarterlyReportTableHeaderProducer.h  Result.h
working-effectively-with-legacycode-cc++/cpp/biz/include/SupersedeInstanceVariable/: ModelReader.h  Persister.h  TransactionManager.h  WorkflowEngine.h
working-effectively-with-legacycode-cc++/cpp/biz/include/TacklingMonstersWithAutomatedRefactoring/: Commodity.h  CommodityFilter.h  CommoditySelectionPanel.h  ListBox.h  View.h
working-effectively-with-legacycode-cc++/cpp/biz/include/TemplateRedefinition/: AsyncReceptionPort.h  CSocket.h  Packet.h
working-effectively-with-legacycode-cc++/cpp/biz/include/seam/: CAsyncSslRec.h  HSSLD.h  SmuTex.h
working-effectively-with-legacycode-cc++/cpp/biz/include/testc/: CTest.h
working-effectively-with-legacycode-cc++/cpp/biz/src/EncapsulateGlobalReferences/: AGGController.cpp  ColumnModel.cpp  Global.cpp  OptionSource.cpp  ProductionOptionSource.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/ExtractAndOverrideGetter/: WorkflowEngine.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/ExtractInterface4Singleton/: ExternalRouter.cpp  IExternalRouter.cpp  MessageRouter.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/IntroduceStaticSetter/: ExternalRouter.cpp  MessageRouter.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/ParameterizeMethod/: TestCase.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/PushDownDependency/: OffMarketTradeValidator.cpp  WindowsOffMarketTradeValidator.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/ReplaceFunctionWithFunctionPointer/: db.c  function_pointer_sample.c
working-effectively-with-legacycode-cc++/cpp/biz/src/SproutClass/: QuarterlyReportGenerator.cpp  QuarterlyReportTableHeaderProducer.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/SupersedeInstanceVariable/: WorkflowEngine.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/TacklingMonstersWithAutomatedRefactoring/: CommodityFilter.cpp  CommoditySelectionPanel.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/counter/: Counter.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/seam/: CAsyncSslRec.cpp
working-effectively-with-legacycode-cc++/cpp/biz/src/testc/: CTest.c
working-effectively-with-legacycode-cc++/cpp/biz/test/: TestSuiteRunAll.cpp
working-effectively-with-legacycode-cc++/cpp/biz/test/EncapsulateGlobalReferences/: AGGControllerTest.cpp  ColumnModelTest.cpp
working-effectively-with-legacycode-cc++/cpp/biz/test/ExtractAndOverrideGetter/: WorkflowEngineTest.cpp
working-effectively-with-legacycode-cc++/cpp/biz/test/ExtractInterface4Singleton/: MessageRouterEI4STest.cpp
working-effectively-with-legacycode-cc++/cpp/biz/test/IntroduceStaticSetter/: MessageRouterTest.cpp
working-effectively-with-legacycode-cc++/cpp/biz/test/ParameterizeMethod/: TestCaseTest.cpp
working-effectively-with-legacycode-cc++/cpp/biz/test/PushDownDependency/: PushDownDependencyTest.cpp
working-effectively-with-legacycode-cc++/cpp/biz/test/ReplaceFunctionWithFunctionPointer/: ReplaceFunctionWithFunctionPointerTest.cpp  function_pointer_sample_test.cpp
working-effectively-with-legacycode-cc++/cpp/biz/test/testc/: CTestTest.cpp
working-effectively-with-legacycode-cc++/cpp/includes/Counter/: Counter.h
working-effectively-with-legacycode-cc++/cpp/tests/: CMakeLists.txt
working-effectively-with-legacycode-cc++/cpp/tests/Counter/: CounterTest.cpp
working-effectively-with-legacycode-cc++/cpp/tests/MySharedLibTest/: MySharedLibTest.cpp
(+299 files in other folders)
